# ai-pm-toolkit

./: .gitignore  CHEAT_SHEET.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICKSTART.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/issue_templates/: bug-report.yml  new-prompt.yml  new-skill.yml  new-workflow.yml
.github/workflows/: validate-structure.yml
cli/: README.md  package-lock.json  package.json
commands/: README.md  build-session.md  clarify-ambiguity.md  first-pass-build.md  problem-statement.md  review-output.md  ship-or-kill.md
context-docs/: README.md  product-context.md  project-context.md  user-context.md
examples/feature-prioritization/: context-doc.md  workflow-walkthrough.md
examples/feedback-dashboard/: agent-session-log.md  (+2 more)
ide-setup/: .cursorrules  .windsurfrules  CLAUDE.md
mcp-server/: README.md  pyproject.toml
mcp-server/scripts/: setup.sh
mcp-server/src/ai_pm_toolkit_mcp/: __init__.py  server.py
mcp-server/src/ai_pm_toolkit_mcp/tools/: __init__.py  build_session.py  get_context.py  get_prompt.py  get_skill.py  list_toolkit.py
mcp-server/src/ai_pm_toolkit_mcp/utils/: __init__.py  file_reader.py  path_resolver.py
prompts/: README.md
skills/: README.md  context-curation.md  evaluation.md  problem-shaping.md  prototyping.md  user-research.md
templates/: discovery-brief.md  launch-checklist.md  prd.md  problem-statement.md  retrospective.md  spec.md  user-research-synthesis.md
toolkit/: which-level-am-i.md
workflows/: README.md  discovery-to-spec.md  ship-or-kill.md  weekly-pm-routine.md  zero-to-prototype.md
(+34 files in other folders)
