[project]
name = "ai-pm-toolkit-mcp"
version = "1.0.0"
description = "MCP server for the AI PM Toolkit"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
ai-pm-toolkit-mcp = "ai_pm_toolkit_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
